--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -21,6 +21,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+    
+    - name: Print Hello World
+      run: echo "Hello World"
   
     - name: Delete 1.txt on push to main
       run: |
